Changing config format to yaml: Changing serialization library from Gson to Jackson: - pom and module-info update